# jamey-3.0

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  ENV_EXAMPLE.md  README.md  TEMPLATE.md  docker-compose.yml  post_mortem_report.md  upgrade-to-4.6-full-emojis.sh
.cursor/prompts/: add-moral-rule.md  debug-memory.md
.cursor/rules/: memory-system.md  rust-standards.md
.github/workflows/: ci.yml  release.yml  test.yml
.sqlx/: query-229a824e20062260a35e47928cd0e90ff951c4b508cf1f3f4492cac458cfb349.json  query-2618ee0189f11dec2b66ea4ce0d227152126fc4b211344df26dc46c00a6c3dff.json  query-3d3683321a07242ef87d08368ecc395494586017bdb416fc56efe1c11473e60d.json  query-3edc441b0b6438f4256b822e6123a7ac2d161ee90a521ebd5fc17a77f27f8c4e.json  query-79b8a90fa5ea453785a80a2fb1bf201aae642f0cbeadde8593fff85c705ba290.json  query-7c36d3c5639b12d55ee9e120d37d84348dc699b19865ce3d27883bbe5beb63f4.json  query-b372631fb7876aa3a7064c924a5f349ca3767b53d679d8656118b92310f69187.json  query-dbe6361d16708cc9af1f0dd55cfe6b6e1fb8439a341cc3eb7324732d2e4a8c48.json  query-de07ea36bb09fe587546d19d5e75aea44201baa93df8a97d722c3a7a0907e232.json  query-dfd44241fc77697535b571a76c097764588fe1a4125deff89adb35463c1c2ca7.json
.sqlx_tmp/: 20250127000000_api_key_rotations.sql
alertmanager/: alertmanager.yml
benches/: system_benchmarks.rs
certs/: ta-ca.crt
docs/: ACTIVATION_PROTOCOL.md  API_REFERENCE.md  ASYNC_PATTERNS.md  AUDIT_GRADES_SUMMARY.md  BADGES.md  BADGES_IMPLEMENTATION.md  BADGES_QUICK_REFERENCE.md  CACHING.md  CLI_USAGE.md  COMPILATION_AUDIT_REPORT.md  CONFIGURATION.md  CONFIGURATION_MIGRATION.md  CONFIGURATION_README.md  CONSCIOUSNESS_CONFIG_SUMMARY.md  CONTEXT_MANAGEMENT.md  DATABASE_SETUP.md  DOCKER_COMPOSE_FIXES.md  ERROR_HANDLING_GUIDELINES.md  FRONTEND_AI_CONFIG_REVIEW.md  FRONTEND_AUDIT.md  FRONTEND_INTEGRATION.md  FRONTEND_PRODUCTION_AUDIT.md  FRONTEND_QUICK_START.md  FRONTEND_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  MQTT_REVIEW.md  MQTT_USAGE.md  NEXT_PHASES_OVERVIEW.md  OPTIMIZATION_PLAN.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_GUIDELINES.md  PHASE2_COMPLETE.md  PHASE2_COMPLETE_FINAL.md  PHASE2_SECURITY_HARDENING.md  PHASE3_OPERATIONAL_READINESS.md  PHASE3_PROGRESS_SUMMARY.md  PORT_AUDIT_REPORT.md  PORT_REFERENCE.md  PRODUCTION_READINESS.md  (+37 more)
docs/adr/: 001-resilience-patterns.md  002-monitoring-observability.md  003-scalability-performance.md  README.md
docs/archive/: QUICK_START_GUIDE.md
docs/deployment/: containerization.md  observability.md
docs/migrations/: consciousness_system_migration.md
docs/setup/: API_KEY_SETUP.md  CONSCIENCE_VERIFICATION.md  DATABASE_INITIALIZED.md  FIX_GIT_CACHE_ISSUES.md  GITHUB_SSH_SETUP.md  GIT_BEST_PRACTICES.md  PROJECT_SETUP.md  README.md  SETUP_DATABASE.md  TROUBLESHOOTING.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/frontend/: .env.example
frontend/src/: App.css  App.test.tsx  App.tsx  main.tsx
grafana/dashboards/: communication-metrics.json  jamey-3.0.json  system_monitoring.json
loki/: loki-config.yaml
migrations/: 20241114000000_init.sql  20241114200000_soul_system.sql  20241114500000_memory_system.sql  20241115000000_api_keys.sql  20241115000000_consciousness_system.sql  20241115010000_consciousness_system.sql  20250128000000_add_llm_provider_to_memory.sql
nginx/: jamey.conf
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
prometheus/rules/: consciousness.yml  emotional.yml  system.yml
promtail/: promtail-config.yaml
scripts/: README.md  backup-db.sh  chat.sh  check-cursor-setup.sh  connect.ps1  connect.sh  create-api-key.sh  dev-start.ps1  fix-mongodb-gpg-key.sh  git-add-safe.sh  install-backup-service.sh  install-jamey-service.ps1  install-jamey-service.sh  jamey-backup.service  jamey-backup.timer  jamey.service  restore-db.sh  run.sh  setup.sh  start-with-cli.ps1  start-with-cli.sh  test-all.sh  test-conscience.sh  test-coverage.sh
src/: error.rs  lib.rs  main.rs  shutdown.rs  telemetry.rs
src/analysis/: performance_report.rs
src/api/: auth.rs  consciousness.rs  errors.rs  key_manager.rs  mod.rs  per_key_rate_limit.rs  rate_limit.rs  validation.rs
src/backup/: backup.rs  mod.rs  restore.rs  schedule.rs  scheduler.rs
src/cli/: mod.rs
src/communication/: metrics.rs  mod.rs  retry.rs
src/config/: mod.rs  tests.rs
src/conscience/: mod.rs
src/consciousness/: attention.rs  global_workspace.rs  higher_order.rs  integrated_info.rs  mod.rs  predictive.rs
src/context/: mod.rs
src/db/: mod.rs  operations.rs
src/health/: endpoints.rs  mod.rs
src/llm/: cost_manager.rs  health.rs  mod.rs  models.rs  redundancy.rs  router.rs
src/memory/: cache.rs  holographic.rs  metrics.rs  mod.rs  monitor.rs  optimizer.rs
src/metrics/: mod.rs  production.rs
src/monitoring/: batch.rs  mod.rs
src/mqtt/: auth.rs  client.rs  config.rs  handlers.rs  messages.rs  mod.rs
tests/: api_integration_tests.rs  communication_integration_tests.rs  consciousness_integration_tests.rs  csrf_tests.rs  database_integration_tests.rs  mqtt_integration_tests.rs  security_tests.rs
(+141 files in other folders)
