[package]
name = "jamey-3"
version = "3.0.0"
edition = "2021"
default-run = "jamey-3"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
validator = { version = "0.18", features = ["derive"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
# Opentelemetry
opentelemetry = { version = "0.22" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["tokio"] }
tracing-opentelemetry = "0.23"
opentelemetry-jaeger = { version = "0.21", features = ["tokio"] }

# Search/Indexing
tantivy = "0.22"

# Memory/Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Thread-safe collections
dashmap = "5.5"

# Neural computation and parallel processing
ndarray = { version = "0.15", features = ["rayon", "serde"] }
rayon = "1.8"

# Compression
lz4 = "1.24"
flate2 = "1.0"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
tokio-tungstenite = "0.20"

# Cryptography / encryption
aes-gcm = "0.10"
rand = "0.8"

# Caching / LRU
lru = "0.12"

# HTTP (used directly in metrics middleware)
hyper = { version = "1", features = ["full"] }

# MQTT
rumqttc = { version = "0.24", features = ["use-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.0"
jsonwebtoken = "9.3"

# Security dependencies
governor = "0.6"
bcrypt = "0.15"
regex = "1.10"
time = { version = "0.3", features = ["serde"] }

# Async runtime utilities
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# HTTP client for OpenRouter API (using rustls instead of OpenSSL to avoid system dependencies)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Cryptography for API key hashing
sha2 = "0.10"

[[bin]]
name = "jamey-cli"
path = "src/bin/jamey-cli.rs"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10"

[[bench]]
name = "system_benchmarks"
harness = false

