[package]
name = "jamey"
version = "0.1.0"
edition = "2021"

[dependencies]
metrics = "0.21"
sysinfo = "0.29"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
inferno = "0.11"
